feat: 完成企业架构优化与采购申请纵向验收